--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="col-right">
                             <h3>Newsletter</h3>
                             <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-                            <form action="">
+                            <form action="form">
                                 <input type="email"></input>
                                 <button class="footer-btn">Subscribe</button>
                             </form>
