--- a/index.html
+++ b/index.html
@@ -151,6 +151,6 @@
                 <p>Challenge by<span> Frontend Mentor.</span></p>
                 <p>Coded by<span> Mohamed Galal.</span></p>
             </div>
-    
         </main>
+    </body>
 </html>
